--- a/style.css
+++ b/style.css
@@ -25,8 +25,8 @@
   background-image: url("./images/background.jpg");
   background-size: cover;
   margin: 0;
-  height: 100%;
-  width: 100%;
+  height: 100vh;
+  width: 100vw;
 }
 h1 {
   color: #579987;
@@ -66,8 +66,8 @@ h1 {
   border-radius: 10px;
   height: 275px;
   width: 250px;
-  padding: 20px;
   font-size: 12px;
+  overflow-y: scroll;
 }
 
 #menu {
@@ -100,13 +100,6 @@ h1 {
 .train {
   width: 80px;
 }
-#barreTrain {
-  height: 2px;
-  width: 80%;
-  background-color: #579987;
-  margin-top: 25px;
-  margin-bottom: 15px;
-}
 input {
   background-color: #f0f1f2;
   border: none;
@@ -135,7 +128,82 @@ input {
   display: flex;
   justify-content: center;
   align-items: center;
+  margin: 0%;
 }
 h2 {
   margin-bottom: 0px;
+}
+#no-search {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+}
+
+#barreTrain {
+  height: 2px;
+  width: 80%;
+  background-color: #579987;
+  margin-top: 25px;
+  margin-bottom: 15px;
+}
+#barreNotFound {
+  height: 2px;
+  width: 80%;
+  background-color: #579987;
+  margin-top: 25px;
+  margin-bottom: 15px;
+}
+#no-tripFound {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 200px;
+}
+#my-search {
+  height: 100%;
+  /* display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center; */
+  margin: 0px 0;
+}
+
+.trips-search:last-child {
+  border-bottom: 20px solid white;
+}
+
+#search-container {
+  height: 100%;
+}
+
+.trips-search {
+  background-color: #f6eeef;
+  border-radius: 5px;
+  padding: 10px;
+  margin: 5px 20px;
+  width: 80%;
+  display: flex;
+  font-weight: bold;
+}
+
+.btn-book {
+  background-color: #579987;
+  color: white;
+  border-radius: 3px;
+  border: none;
+  padding: 10px;
+  font-size: 10px;
+}
+::-webkit-scrollbar {
+  width: 5px;
+  background: #ffffff;
+}
+::-webkit-scrollbar-thumb {
+  border: solid 0 transparent;
+  background-color: #6b6a6b;
+  border-radius: 10px;
 }
