--- a/style.css
+++ b/style.css
@@ -161,7 +161,7 @@ h2 {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 200px;
+  width: 100%;
 }
 #my-search {
   height: 100%;
